--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -767,6 +767,10 @@ button.username {
 	display: block;
 	margin-top: 3px;
 }
+#profile_left_pane .nameRow .username {
+	float: right;
+	font-weight: normal;
+}
 #profile_left_lane .profileName {
 	font-size: 18px;
 }
