Refactored the routing logic. Continued refactoring the prequeries. Continued work on the profiles. Moved more logic out of the routes.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,11 +7,13 @@
 		<div class="rowitem"><h1>Profile</h1></div>
 	</header>-->
 	<div id="profile_left_pane" class="rowmenu">
-		<div class="rowitem avatarRow">
-			<img src="{{.ProfileOwner.Avatar}}" class="avatar" />
-		</div>
-		<div class="rowitem nameRow">
-			<span class="profileName">{{.ProfileOwner.Name}}</span>{{if .ProfileOwner.Tag}}<span class="username">{{.ProfileOwner.Tag}}</span>{{end}}
+		<div class="topBlock">
+			<div class="rowitem avatarRow">
+				<img src="{{.ProfileOwner.Avatar}}" class="avatar" />
+			</div>
+			<div class="rowitem nameRow">
+				<span class="profileName">{{.ProfileOwner.Name}}</span>{{if .ProfileOwner.Tag}}<span class="username">{{.ProfileOwner.Tag}}</span>{{end}}
+			</div>
 		</div>
 		<div class="passiveBlock">
 			<div class="rowitem passive">
