More refactoring. So much data o.o
Fixed the tests.
Added wrapper functions for the various logging levels.
Added the SetPreset method to *Forum.
Added the ReloadGroup to the ForumPermsStore.

--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -157,7 +157,7 @@ ul {
 	display: none;
 }
 
-.rowblock {
+.rowblock, .colstack_item {
 	margin-bottom: 12px;
 	border: 1px solid var(--header-border-color);
 	border-bottom: 2px solid var(--header-border-color);
