Renamed setting.go to settings.go Added the BypassGet method to SettingMap and refactored the Control Panel to use it. Refactored the query builder.
More work on Cosora.

--- a/templates/account-own-edit-avatar.html
+++ b/templates/account-own-edit-avatar.html
@@ -1,24 +1,26 @@
 {{template "header.html" . }}
-{{template "account-menu.html" . }}
-<main class="colstack_right">
-	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><h1>Edit Avatar</h1></div>
-	</div>
-	{{if .CurrentUser.Avatar}}
-	<div class="colstack_item">
-		<div class="rowitem"><img src="{{.CurrentUser.Avatar}}" height="128px" max-width="128px" /></div>
-	</div>
-	{{end}}
-	<div class="colstack_item">
-		<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
-			<div class="formrow real_first_child">
-				<div class="formitem formlabel"><a>Upload Avatar</a></div>
-				<div class="formitem"><input name="account-avatar" type="file" required /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
-			</div>
-		</form>
+<main class="colstack account">
+	{{template "account-menu.html" . }}
+	<div class="colstack_right">
+		<div class="colstack_item colstack_head rowhead">
+			<div class="rowitem"><h1>Edit Avatar</h1></div>
+		</div>
+		{{if .CurrentUser.Avatar}}
+		<div class="colstack_item">
+			<div class="rowitem"><img src="{{.CurrentUser.Avatar}}" height="128px" max-width="128px" /></div>
+		</div>
+		{{end}}
+		<div class="colstack_item form_item">
+			<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
+				<div class="formrow real_first_child">
+					<div class="formitem formlabel"><a>Upload Avatar</a></div>
+					<div class="formitem"><input name="account-avatar" type="file" required /></div>
+				</div>
+				<div class="formrow">
+					<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
+				</div>
+			</form>
+		</div>
 	</div>
 </main>
 {{template "footer.html" . }}
