--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -1,27 +1,29 @@
 {{template "header.html" . }}
-{{template "account-menu.html" . }}
-<main class="colstack_right">
-	<div class="colstack_item colstack_head rowhead">
-		<div class="rowitem"><h1>Edit Password</h1></div>
-	</div>
-	<div class="colstack_item">
-		<form action="/user/edit/critical/submit/" method="post">
-			<div class="formrow real_first_child">
-				<div class="formitem formlabel"><a>Current Password</a></div>
-				<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" required /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>New Password</a></div>
-				<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" required /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>Confirm Password</a></div>
-				<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" required /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
-			</div>
-		</form>
+<main class="colstack account">
+	{{template "account-menu.html" . }}
+	<div class="colstack_right">
+		<div class="colstack_item colstack_head rowhead">
+			<div class="rowitem"><h1>Edit Password</h1></div>
+		</div>
+		<div class="colstack_item form_item">
+			<form action="/user/edit/critical/submit/" method="post">
+				<div class="formrow real_first_child">
+					<div class="formitem formlabel"><a>Current Password</a></div>
+					<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" required /></div>
+				</div>
+				<div class="formrow">
+					<div class="formitem formlabel"><a>New Password</a></div>
+					<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" required /></div>
+				</div>
+				<div class="formrow">
+					<div class="formitem formlabel"><a>Confirm Password</a></div>
+					<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" required /></div>
+				</div>
+				<div class="formrow">
+					<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
+				</div>
+			</form>
+		</div>
 	</div>
 </main>
 {{template "footer.html" . }}
